objects/ssot__ClaimItemParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClaimItemId__c</fullName>
        <label>Claim Item</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimParticipantId__c</fullName>
        <label>Claim Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Item Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsResponsible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resonsible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128255727_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimItemParticipant_ClaimItemId_map_rel</label>
        <referenceTo>ssot__ClaimItem__dlm</referenceTo>
        <relationshipLabel>ClaimItemParticipant_ClaimItemId_map_rel</relationshipLabel>
        <relationshipName>rel_1723128255727_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128263914_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimItemParticipant_ClaimParticipan_rel</label>
        <referenceTo>ssot__ClaimParticipant__dlm</referenceTo>
        <relationshipLabel>ClaimItemParticipant_ClaimParticipan_rel</relationshipLabel>
        <relationshipName>rel_1723128263914_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>